--- a/PVSBoardGames/Base.lproj/Main.storyboard
+++ b/PVSBoardGames/Base.lproj/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="xf0-sW-Szk">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Qti-3V-RdF">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -38,6 +38,7 @@
                     <navigationItem key="navigationItem" title="My Games" id="NLx-Vt-CTp"/>
                     <connections>
                         <outlet property="tableView" destination="Vnb-CM-Zfw" id="q41-3o-jqt"/>
+                        <segue destination="xNu-iQ-VBg" kind="show" identifier="GameViewControllerSegue" id="6Zf-KW-odT"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nD6-aL-chL" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -61,7 +62,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Uza-JY-U8Z" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3147" y="949"/>
+            <point key="canvasLocation" x="2318" y="949"/>
         </scene>
         <!--What's New-->
         <scene sceneID="vZG-sm-ep1">
@@ -166,24 +167,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="egt-SX-Tsk" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="731" y="949"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="M9O-DI-eKb">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="xf0-sW-Szk" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="1sV-sf-2G7">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="xNu-iQ-VBg" kind="relationship" relationship="rootViewController" id="QWw-DI-zHr"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="ctY-4j-t35" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2335" y="949"/>
         </scene>
     </scenes>
 </document>
